<resources>
    <string name="app_name">Tour Guide App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_beaches">BEACHES</string>
    <string name="category_amusmentparks">PARKS</string>
    <string name="category_religiousplaces"> RELIGIOUS</string>
    <string name="category_gardens">GARDENS</string>
    <string name="details">Details</string>
    <string name="near_by_attractions">Nearby Attractions</string>
    <string name="activities_to_do">Activities to do</string>
    <string name="best_time_to_visit">Best time to visit</string>
    <string name="things_to_do">Things to do</string>
    <string name="timings">Timings</string>
    <string name="entry_fee">Entry fee</string>
    <string name="attractions">Attractions</string>
    <string name="aksa_beach">AKSA BEACH</string>
    <string name="juhu_beach">JUHU BEACH</string>
    <string name="chowpatty_beach">CHOWPATTY BEACH</string>
    <string name="dadar_beach">DADAR BEACH</string>
    <string name="madh_beach">MADH BEACH</string>
    <string name="marve_beach">MARVE BEACH</string>
    <string name="hanging_garden">HANGING GARDEN</string>
    <string name="kamla_nehru_park">KAMLA NEHRU PARK</string>
    <string name="jija_mata_udyan">JIJA MATA UDYAN</string>
    <string name="sgnp">SANJAY GANDHI NATIONAL PARK</string>
    <string name="essel_world">ESSEL WORLD</string>
    <string name="water_kingdom">WATER KINGDOM</string>
    <string name="adlabs_imagica">ADLABS IMAGICA</string>
    <string name="suraj_water_park">SURAJ WATER PARK</string>
    <string name="haji_ali">HAJI ALI</string>
    <string name="mahalaxmi_temple">MAHALAXMI TEMPLE</string>
    <string name="mount_mary_church">MOUNT MARY CHURCH</string>
    <string name="iskon_temple">ISKON TEMPLE</string>
    <string name="siddhivinayak_temple">SIDDHIVINAYAK TEMPLE</string>
    <string name="global_pagoda">GLOBAL PAGODA</string>
    <string name="elephanta_caves">ELEPHANTA CAVES</string>
    <string name="aksa_details">
        Aksa beach is one of those beaches in Mumbai with clean sand and less crowd.
        There are couple of vendors selling ice candies and some snacks.
        \n\nDue to its unsafe nature and distance in far suburb
        this beach is less explored by tourists.</string>
    <string name="aksa_nearby">
        Madh/Marve beach.
        \nEssel World and Water Kingdom.
        \nNational Park (Borivali).
        \nInorbit and Infinity malls at Malad Link road.</string>
    <string name="aksa_activities">
        Aksa has those sweet moments for people who want to spend sometime in peace and with nature but also within city.
        \n\nThe shades of coconut trees are blessing in summer, There are resorts near the beach which you can enjoy as well.
        The view of sunset is breath taking near the sea.
        \n\nAksa village has small huts which are converted to resturants and hotels, and one can relax and have snacks there.
    </string>
    <string name="aksa_best_time">
        The best time to visit Aksa beach is between the months September and April.
    </string>
    <string name="juhu_details">
        This beach is known to be one of the most visited beaches in India and is situated in Ville Parle in Western suburbs of Mumbai.
        \n\n Juhu beach is also famous amongst Indians for its street food and local delicacies.
        \n\nWatching the sunset in this wonderful place, guarded by the vast Arabian sea provides a beautiful visual for the eyes.
    </string>
    <string name="juhu_nearby">
        Versova is a nearby attraction from Juhu
    </string>
    <string name="juhu_activities">
        The Street foods such as "Bhel puri" ,"Pani puri" and "Pav Bhaji" are mouth watering delicacies one must try.
        \n\nOne can also taste cuisines from around the world as well as try local sea food near Juhu Beach.
        \n\nYoung  and adventerous ones can try activities like horse riding and camel rides.
    </string>
    <string name="juhu_best_time">
        The best time to visit Juhu beach is from months of October to February.
        \nIt is best to avoid visiting this beach during monsoon season because there can be possibilities of high tides.
    </string>
    <string name="chow_details">
        Dadar Chowpatty beach is a small and less crowded rocky beach with little sand around.
        People come here to enjoy silence,breeze,sunset view and the giant view of Bandra Worli sea Link Bridge.
        \n\nDadar beach is scenic with couple of attractions frequently visited by locals, walkable distance from shivaji park.
        \n\nAn awesome view of Bandra Worli sea Link accompanies you along with the sounds and breezes of the ocean
    </string>
    <string name="chow_nearby">
        Bandra Worli Sea Link.
        \nDadar Market,near station.
        \nYou can visit Siddhivinayak temple from there.
    </string>
    <string name="chow_activities">
        One can have view of Bandra worli sea link.
        \nIn north side of beach some refreshment can be found.
        \nWalkable distance to Shivaji park, where locals frequent.
    </string>
    <string name="chow_best_time">
        The best time to visit Dadar Chowpatty is between the months of September and April.
    </string>
    <string name="dadar_details">
        Dadar Chowpatty beach is a small and less crowded rocky beach with little sand around.
        People come here to enjoy silence,breeze,sunset view and the giant view of Bandra Worli sea Link Bridge.
        \n\nDadar beach is scenic with couple of attractions frequently visited by locals, walkable distance from shivaji park.
        \n\nAn awesome view of Bandra Worli sea Link accompanies you along with the sounds and breezes of the ocean
    </string>
    <string name="dadar_nearby">
        Bandra Worli Sea Link.
        \nDadar Market,near station.
        \nYou can visit Siddhivinayak temple from there.
    </string>
    <string name="dadar_activities">
        One can have view of Bandra worli sea link.
        \nIn north side of beach some refreshment can be found.
        \nWalkable distance to Shivaji park, where locals frequent.
    </string>
    <string name="dadar_best_time">
        he best time to visit Dadar Chowpatty is between the months of September and April.
    </string>
    <string name="madh_details">
        The beautiful beach is actually made of cluster of little villages and farmlands situated in the North western coast of Mumbai.
        \n\nThe shore is surrounded by mangroves which not only add to its scenic beauty,but also seperates the beach from the mainland.
        \n\nThe Madh Island beach attracts large crowds due to its calm waters and soothing scenery.
        \n\nThis beach is one of the cleanet one in the state.
    </string>
    <string name="madh_nearby">
        Madh Fort.
        \n\nErangal
        \n\nSt Bonaventuren
    </string>
    <string name="madh_activities">
        The Madh island beach is popular venue for shooting movies and Daily local soaps.
        It is a different experience to watch a live shoot.
        \n\n"The Retreat" and "The Resort" are the two popular five star hotels near the beach.Tourists can spend time
        enjoying the magnificent view along side the swimming pool of the resort and pamper themselves a little.
        \n\nThere is music being played on the beach for people to enjoy.
        \n\nPeople can explore local fishing communities that are situated close to the seashore.
    </string>
    <string name="madh_best_time">
        Best time to visit this beach is between October and June.At this time of the year there is less humidity
        and the weather is pleasend.
    </string>
    <string name="marv_details">
        Marve beach is located in the Western Suburbs of Malad in Mumbai.
        \n\nFerry Services to Essel World and Water kingdom theme parks and Manori are available from here.
        \n\nMarve beach can be reached from Malad railway station, Rickshaws and taxis.
        \n\nThe beach is not safe for swimming due to its sinking sand.
    </string>
    <string name="marv_nearby">
        Essel World theme park.
        Gorai Beach:The gorai beach is popular for its beautiful surroundings and villas.Ferries are available at Marve beach to gorai beach.
    </string>
    <string name="marv_activities">
        One will love to explore the sheer scenic beauty of these beaches in the absesnce of the chaotic crowd of vendors.
        \n\The beach has some very fine cottages built on the sea shore with a beautiful view of the arabian sea.
        \n\nThese cottages offer utmost luxury and hospitablity and luxury and are definetely tempting for most that see them.
    </string>
    <string name="marv_best_time">
        The Best time to visit this beach is from October to March, as there is less humidity.
        This beach is near from the residential area and ideal for a morning run or a morning walk.
    </string>
    <string name="essel_details">
        Essel World is the biggest and one of the first amusment parks in India.
        \n\nThis amusment park is popular for its colossal infrastructure and several exciting dry and wet rides.
        \n\nThe best feature of the Essel World Amusment park is that it is open all year round.
    </string>
    <string name="essel_attract">
        There are several high adrenaline fun rides catering to various age groups.
        Dry rides,Wet rides, a discotheque and a massive food court are some of the many attractions of this park.
        \n\nAmong all fun activities that can be enjoyed, the ice skating ring,discotheque and bowling alley serve as the prime attractions
        for people.
        \n\nThere are also avenues for shopping and food courts for people looking for a holistic experience.
    </string>
    <string name="essel_timings">
        11 am to 7 pm on Weekdays.
        \n10 am to 7 pm on Weekends.
    </string>
    <string name="essel_entry">
        390 Rupees to 490 Rupees for Children.
        \n590 Rupees to 790 Rupees for Adults.
        \n290 Rupees for Senior citizens.
    </string>
    <string name="essel_best_time">
        The best time to visit Essel World is from October to March.
    </string>
    <string name="king_details">
        Water Kingdom is known to be Asia\'s biggest water theme park and was established in 1998.
        \n\nLocated in Gorai,Mumbai,the water park is an extension of Essel World.
        \n\nApart from the slides ,rides and other fun activities, the water park also has a number of restaurants that promise
        tourists lip-smacking delights.
        \n\nWater Kingdom is truly a remarkable place that offers unlimited fun for all who visit the park.
    </string>
    <string name="king_attract">
        "Aquadrome" is a unique feature at the Water Kingdom,where a dance zone of 7000 square feet is set with numerous water sprinklers.
        \n\nTourists can enjoy dancing to the music while being occasionally sprayed with water from the sprinklers.
        \n\nThe "Misphisly Hill" has 12 terrifying high adrenaline rides that are extremely popular at the water park.
        \n\nThe "Drifting River" is a loop of gently flowing water that promises a ton of excitement with slow currents, where
        people can relax and float.
        \n\nSome of the other enthralling attractions here include the "juicy jammer","Turbi Terminator","Black Demon" and "Lemon Drops".
    </string>
    <string name="king_timings">
        11 am to 7 pm on Weekdays
        \n11 am to 7 pm on Weekends
    </string>
    <string name="king_entry">
        590 Rupees for Children.
        \n890 Rupees for Adults.
        \n290 Rupees for Senior citizens.
    </string>
    <string name="king_best_time">
        One can visit Water Kingdom throughout the year.
    </string>
</resources>